tests/expected/semant08e.semant.err
semant08e.usc:15:8: error: Cannot assign an expression of type char[] to int
	int x = "This is a string";
	      ^
semant08e.usc:16:4: error: Cannot assign an expression of type char[] to int
	x = "This is also a string";
	  ^
2 Error(s)
